crates/fossil-mir/tests/snapshots/rewrite_rules__r10_after.snap
---
source: crates/fossil-mir/tests/rewrite_rules.rs
expression: "format!(\"{:#?}\", rewritten.ops(&db))"
---
[
    Source {
        uri: "sales.csv",
        format: Csv,
        row_type: Ty(
            Id(401),
        ),
    },
    GroupBy {
        input: 0,
        keys: [
            "region",
            "year",
        ],
    },
    Sink {
        input: 1,
        sink: GraphAr,
    },
]
