crates/fossil-mir/tests/snapshots/rewrite_rules__r1_before.snap
---
source: crates/fossil-mir/tests/rewrite_rules.rs
expression: "format!(\"{:#?}\", graph.ops(&db))"
---
[
    Source {
        uri: "users.csv",
        format: Csv,
        row_type: Ty(
            Id(401),
        ),
        binding: "users.csv",
    },
    Filter {
        input: 0,
        pred: BinOp {
            op: Eq,
            lhs: ColRef {
                source: "",
                column: "status",
            },
            rhs: LitString(
                "active",
            ),
            ty: Ty(
                Id(402),
            ),
        },
    },
    Filter {
        input: 1,
        pred: BinOp {
            op: Eq,
            lhs: ColRef {
                source: "",
                column: "tier",
            },
            rhs: LitString(
                "gold",
            ),
            ty: Ty(
                Id(402),
            ),
        },
    },
    Sink {
        input: 2,
        sink: GraphAr,
    },
]
