crates/fossil-mir/tests/snapshots/rewrite_rules__r2_before.snap
---
source: crates/fossil-mir/tests/rewrite_rules.rs
expression: "format!(\"{:#?}\", graph.ops(&db))"
---
[
    Source {
        uri: "users.csv",
        format: Csv,
        row_type: Ty(
            Id(401),
        ),
        binding: "users.csv",
    },
    Project {
        input: 0,
        cols: [
            "id",
            "name",
            "age",
        ],
    },
    Project {
        input: 1,
        cols: [
            "name",
            "id",
        ],
    },
    Sink {
        input: 2,
        sink: GraphAr,
    },
]
