crates/fossil-mir/tests/snapshots/rewrite_rules__r3_before.snap
---
source: crates/fossil-mir/tests/rewrite_rules.rs
expression: "format!(\"{:#?}\", graph.ops(&db))"
---
[
    Source {
        uri: "users.csv",
        format: Csv,
        row_type: Ty(
            Id(401),
        ),
    },
    Filter {
        input: 0,
        pred: BinOp {
            op: Eq,
            lhs: ColRef {
                source: "",
                column: "status",
            },
            rhs: LitString(
                "active",
            ),
            ty: Ty(
                Id(402),
            ),
        },
    },
    Project {
        input: 1,
        cols: [
            "id",
            "status",
        ],
    },
    Sink {
        input: 2,
        sink: GraphAr,
    },
]
