crates/fossil-mir/tests/snapshots/rewrite_rules__r5_after.snap
---
source: crates/fossil-mir/tests/rewrite_rules.rs
expression: "format!(\"{:#?}\", rewritten.ops(&db))"
---
[
    Source {
        uri: "users.csv",
        format: Csv,
        row_type: Ty(
            Id(401),
        ),
    },
    Source {
        uri: "orders.csv",
        format: Csv,
        row_type: Ty(
            Id(402),
        ),
    },
    Join {
        left: 4,
        right: 1,
        on: BinOp {
            op: Eq,
            lhs: ColRef {
                source: "",
                column: "id",
            },
            rhs: LitString(
                "user_id",
            ),
            ty: Ty(
                Id(403),
            ),
        },
        kind: Inner,
        left_name: "users",
        right_name: "orders",
    },
    Sink {
        input: 2,
        sink: GraphAr,
    },
    Filter {
        input: 0,
        pred: BinOp {
            op: Eq,
            lhs: ColRef {
                source: "",
                column: "status",
            },
            rhs: LitString(
                "active",
            ),
            ty: Ty(
                Id(403),
            ),
        },
    },
]
